# deepresearch

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  code-review-2026-06-12.md  pyproject.toml  resume-严正阳-AI-Agent开发.md  严正阳_简历.docx
.claude/workflows/: design-grill.js
benchmark/: README.md  capability_eval.py  compare.py  gate.py  queries.json  questions.json
benchmark/capability_results/: Q1-solid-state-battery_multi-agent_r3.json  Q1-solid-state-battery_pipeline_r2.json  Q1-solid-state-battery_react_r2.json  Q1-solid-state-battery_react_r3.json  (+8 more)
docs/: architecture-evolution.md  architecture-v3-zh.md  architecture-v3.md  interview-prep-ai-agent.md
drb_eval/: compare_4.py  compare_4_fixed.py  run_race_deepseek.py
plans/: phase1-three-fixes.md
scripts/: check_tavily_keys.py
tests/: conftest.py  test_benchmark_questions.py  test_citations.py  test_cli.py  test_compare.py  test_config.py  test_eval_target.py  test_evaluators.py  test_evidence_prompt.py  test_extraction_prompt.py  test_filenames.py  test_gate.py  test_graph_structure.py  test_integration_offline.py  test_json_parsing.py  test_metrics.py  test_planning_node.py  test_planning_prompt.py  test_prepare_evidence_node.py  test_react_agent.py  test_react_workspace_agent.py  test_report_writer.py  test_reviewing_node.py  test_runner.py  test_saving_node.py  test_searching_node.py  test_source_quality.py  test_state.py  test_subquestion_agent.py  test_synthesizing_node.py  test_tavily_client.py  test_tools.py  test_urls.py  test_verbose.py  test_writing_node.py  test_writing_prompt.py
(+226 files in other folders)
