[project]
name = "deepresearch"
version = "0.1.0"
description = "LangGraph CLI Deep Research Agent using DeepSeek and Tavily"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "tavily-python>=0.5.0",
    "typer>=0.12.0",
]

[project.scripts]
deepresearch = "deepresearch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
